--- a/index.html
+++ b/index.html
@@ -1,7 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Learning Journey</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hkkosted with GitHub Pagesss.</p>
+  <header>
+    <h1>My Learning Journey</h1>
+    <p>Sharing my daily learnings from books and studies.</p>
+  </header>
+
+  <main>
+    <article>
+      <h2>Date: YYYY-MM-DD</h2>
+      <p>**Topic:** Describe the subject you learned about.</p>
+      <p>**Content:** Write about what you learned in detail, key points, interesting findings, etc.</p>
+      <h3>Summary of Learnings</h3>
+      <ul>
+        <li>List your key takeaways.</li>
+        <li>Summarize the important points.</li>
+      </ul>
+      <h3>Projects Done</h3>
+      <p>Describe any projects you completed related to this topic.</p>
+      <p>You can also include links to project code or other relevant resources.</p>
+    </article>
+
+    </main>
+
+  <footer>
+    <p>&copy; 2024 Mikael Björkli</p>
+  </footer>
 </body>
 </html>
